# caramelo.papelaria

./: .gitignore  config.yml  deploy.sh  generate_site.py  pyproject.toml  readme.md  requirements.txt
docs/: CNAME  index.html
tests/: test_generate_site.py
themes/dia_das_mulheres/: index.html
themes/dia_das_mulheres/assets/css/: styles.css
themes/dia_das_mulheres/assets/js/: script.js
themes/minimal/: index.html
themes/minimal/assets/css/: styles.css
themes/minimal/assets/js/: script.js
themes/pascoa/: index.html
themes/pascoa/assets/css/: styles.css
themes/pascoa/assets/js/: script.js
themes/sweet/: index.html
themes/sweet/assets/css/: styles.css
themes/sweet/assets/js/: script.js
